@@ -21,6 +21,7 @@ http://timgolden.me.uk/python/wmi.html
 What's Changed?
 ===============
 
+8th Feb 2007  1.3    . Added support for extrinsic events
 28th Dec 2006 1.2.1  . Corrected problem with Event watcher reported by Charlie Taylor
                      . First steps towards pythondoc-style docstrings
 8th Oct 2006  1.2    . Improved performance by lazy lookups and cached values
